--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "jspdf": "^2.5.2",
     "lucide-react": "^0.468.0",
     "mongoose": "^8.9.0",
+    "multer": "^1.4.5-lts.1",
     "next": "15.1.0",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.4",
@@ -58,6 +59,7 @@
     "@eslint/eslintrc": "^3",
     "@types/bcryptjs": "^2.4.6",
     "@types/json2csv": "^5.0.7",
+    "@types/multer": "^1.4.12",
     "@types/node": "^20",
     "@types/nodemailer": "^6.4.17",
     "@types/react": "^19",
