--- a/package.json
+++ b/package.json
@@ -33,9 +33,11 @@
     "clsx": "^2.1.1",
     "csv-parse": "^5.6.0",
     "formidable": "^3.5.2",
+    "framer-motion": "^11.15.0",
     "immer": "^10.1.1",
     "json2csv": "^6.0.0-alpha.2",
     "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.4",
     "lucide-react": "^0.468.0",
     "mongoose": "^8.9.0",
     "multer": "^1.4.5-lts.1",
